--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header class="page-header" data-test="header">
             <nav class="navigation">
                 <a class="navigation-logo" href="#">
-                    <img class="page-header-logo" src="images-logo.svg" alt="Логотип">
+                    <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны">
                 </a>
                 <ul class="navigation-list">
                     <li class="navigation-item">
@@ -42,8 +42,9 @@
 
         <main class="mail-index" data-test="main">
             <section class="hero" data-test="hero">
-                <h1 class="visually-hidden"> Седона</h1>
-                <img src="#" alt="Добро пожаловать в великолепные отели Седоны">
+                <h1 class="visually-hidden"> Седона- маленький городок в Аризоне</h1>
+                <img src="images/welcome.svg" width="458" height="352"
+                    alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
             </section>
 
             <section class="advantages" data-test="advantages">
@@ -54,7 +55,7 @@
                     <li class="advantages-item">
                         <h3 class="advantages-title">Настоящий городок</h3>
                         <p class="advantages-description">Седона- не аттракцион для туристов, там течет своя жизнь</p>
-                        <img src="#" alt="Здание в городе">
+                        <img src="images/photo/building-city.jpg" width="800" height="385" alt="Здание в городе">
                     </li>
                     <li class="advantages-item">
                         <h3 class="advantages-title">Небольшая площадь</h3>
@@ -69,9 +70,9 @@
                         <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
                     </li>
                     <li class="advantages-item">
-                        <img src="#" alt="Мост дьявола">
                         <h3 class="advantages-title">Там есть мост дьявола</h3>
                         <p class="advantages-description">Да, по нему можно пройти!Если вы осмелитесь, разумеется</p>
+                        <img src="images/photo/diablo-bridge.jpg" width="800" height="385" alt="Мост дьявола">
                     </li>
                 </ul>
             </section>
@@ -109,7 +110,7 @@
                 <form action="https://echo.htmlacademy.ru/" class="newsletter-form">
                     <p class="subscribe-form-name">
                         <label for="user-email" class="visually-hidden">Ваш e-mail</label>
-                        <input type="email" placeholder="ваш e-mail" class="email-input" id="user-email">
+                        <input type="email" placeholder="ваш e-mail" class="email-input" id="user-email" required>
                     </p>
                     <button type="submit">Подписаться</button>
                 </form>
@@ -136,7 +137,7 @@
             </ul>
             <a href="tel:+78128121212">+7(812) 812-12-12</a>
             <a href="https://htmlacademy.ru/" class="copyright">
-                <img src="#" alt="Логотип Html-academy">
+                <img src="images/logo-HTML-Academy.svg" width="115" height="33" alt="Логотип Html-academy">
             </a>
         </footer>
     </body>
