--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Седона. Городок в Аризоне</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
 
     <body>
@@ -37,10 +38,10 @@
                     </li>
                 </ul>
             </nav>
-            <a class="header-button" href="#"> Хочу сюда!</a>
+            <a class="header-button" href="#"> ХОЧУ СЮДА!</a>
         </header>
 
-        <main class="mail-index" data-test="main">
+        <main class="main-index" data-test="main">
             <section class="hero" data-test="hero">
                 <h1 class="visually-hidden"> Седона- маленький городок в Аризоне</h1>
                 <img src="images/welcome.svg" width="458" height="352"
@@ -52,26 +53,28 @@
                 <p class="lead">Седона- небольшой городок в Аризоне, заслуживающий большего!</p>
                 <p class="advantages-text">Рассмотрим причины по которым Седона круче, чем Гранд Каньон!</p>
                 <ul class="advantages-list">
-                    <li class="advantages-item">
+                    <li class="advantages-item advantages-item-big">
                         <h3 class="advantages-title">Настоящий городок</h3>
-                        <p class="advantages-description">Седона- не аттракцион для туристов, там течет своя жизнь</p>
+                        <p class="advantages-description">Седона- не аттракцион для туристов, там течет своя жизнь
+                        </p>
                         <img src="images/photo/building-city.jpg" width="800" height="385" alt="Здание в городе">
                     </li>
-                    <li class="advantages-item">
+                    <li class="advantages-item advantages-item-medium">
                         <h3 class="advantages-title">Небольшая площадь</h3>
                         <p class="advantages-description">Все достопримечательности находятся очень близко</p>
                     </li>
-                    <li class="advantages-item">
+                    <li class="advantages-item advantages-item-medium">
                         <h3 class="advantages-title">Красивая дорога</h3>
                         <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
                     </li>
-                    <li class="advantages-item">
+                    <li class="advantages-item advantages-item-medium">
                         <h3 class="advantages-title">Мало туристов</h3>
                         <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
                     </li>
-                    <li class="advantages-item">
+                    <li class="advantages-item advantages-item-big">
                         <h3 class="advantages-title">Там есть мост дьявола</h3>
-                        <p class="advantages-description">Да, по нему можно пройти!Если вы осмелитесь, разумеется</p>
+                        <p class="advantages-description">Да, по нему можно пройти!Если вы осмелитесь, разумеется
+                        </p>
                         <img src="images/photo/diablo-bridge.jpg" width="800" height="385" alt="Мост дьявола">
                     </li>
                 </ul>
@@ -79,7 +82,7 @@
             <section class="infrastructure" data-test="search">
                 <h2 class="visually-hidden">Инфраструктура</h2>
                 <p class="lead">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
-                <p class="text">Опытный персонал и качественное обслуживание!</p>
+                <p class="infrastructure-text">Опытный персонал и качественное обслуживание!</p>
                 <ul class="infrastructure-list">
                     <li class="infrastructure-item house">
                         <h3 class="infrastructure-title">Жилье</h3>
@@ -104,6 +107,7 @@
 
                 <a class="search-button" href="catalog.html">Поиск гостиницы в Седоне</a>
             </section>
+            <div class="block-subscribe">
             <section class="newsletter" data-test="subscribe">
                 <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
                 <p class="newsletter-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -111,10 +115,12 @@
                     <p class="subscribe-form-name">
                         <label for="user-email" class="visually-hidden">Ваш e-mail</label>
                         <input type="email" placeholder="ваш e-mail" class="email-input" id="user-email" required>
-                    </p>
-                    <button type="submit">Подписаться</button>
+
+                    <button type="submit" class="newsletter-button">Подписаться</button>
+                </p>
                 </form>
             </section>
+            </div>
         </main>
 
         <footer class="page footer" data-test="footer">
@@ -135,11 +141,12 @@
                     </a>
                 </li>
             </ul>
-            <a href="tel:+78128121212">+7(812) 812-12-12</a>
-            <a href="https://htmlacademy.ru/" class="copyright">
-                <img src="images/logo-HTML-Academy.svg" width="115" height="33" alt="Логотип Html-academy">
+            <a class="footer-phone" href="tel:+78128121212">+7(812) 812-12-12</a>
+            <a class="copyright" href="https://htmlacademy.ru/">
+                <img src="images/logo-html-academy.svg" width="115px" height="33px" alt="Логотип Html-academy">
             </a>
         </footer>
     </body>
+
 
 </html>
