--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </li>
                 </ul>
             </nav>
-            <a class="header-button" href="#"> ХОЧУ СЮДА!</a>
+            <a class="header-button" href="#"> Хочу сюда!</a>
         </header>
 
         <main class="main-index" data-test="main">
@@ -108,18 +108,18 @@
                 <a class="search-button" href="catalog.html">Поиск гостиницы в Седоне</a>
             </section>
             <div class="block-subscribe">
-            <section class="newsletter" data-test="subscribe">
-                <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
-                <p class="newsletter-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
-                <form action="https://echo.htmlacademy.ru/" class="newsletter-form">
-                    <p class="subscribe-form-name">
-                        <label for="user-email" class="visually-hidden">Ваш e-mail</label>
-                        <input type="email" placeholder="ваш e-mail" class="email-input" id="user-email" required>
+                <section class="newsletter" data-test="subscribe">
+                    <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+                    <p class="newsletter-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+                    <form action="https://echo.htmlacademy.ru/" class="newsletter-form">
+                        <p class="subscribe-form-name">
+                            <label for="user-email" class="visually-hidden">Ваш e-mail</label>
+                            <input type="email" placeholder="ваш e-mail" class="email-input" id="user-email" required>
 
-                    <button type="submit" class="newsletter-button">Подписаться</button>
-                </p>
-                </form>
-            </section>
+                            <button type="submit" class="newsletter-button">Подписаться</button>
+                        </p>
+                    </form>
+                </section>
             </div>
         </main>
 
@@ -143,7 +143,7 @@
             </ul>
             <a class="footer-phone" href="tel:+78128121212">+7(812) 812-12-12</a>
             <a class="copyright" href="https://htmlacademy.ru/">
-                <img src="images/logo-html-academy.svg" width="115px" height="33px" alt="Логотип Html-academy">
+                <img src="images/logo-html-academy.svg" width="115" height="33" alt="Логотип Html-academy">
             </a>
         </footer>
     </body>
