--- a/index.html
+++ b/index.html
@@ -8,144 +8,150 @@
   </head>
 
   <body>
-    <header class="page-header" data-test="header">
-      <nav class="navigation">
-        <a class="navigation-logo" href="#">
-          <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны">
-        </a>
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="#">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#"> О Седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html"> Гостиницы</a>
-          </li>
-        </ul>
-        <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden"> Поиск</span>
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden"> Избранное</span>
-              <span class="notification-badge"> 12</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <a class="header-button" href="#"> Хочу сюда!</a>
-    </header>
+    <div class="page-container">
+      <header class="page-header" data-test="header">
+        <nav class="navigation">
+          <a class="navigation-logo" href="#">
+            <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны">
+          </a>
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-current" href="#">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#"> О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="catalog.html"> Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-list navigation-user">
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <span class="visually-hidden"> Поиск</span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">
+                <span class="visually-hidden"> Избранное</span>
+                <span class="notification-badge"> 12</span>
+              </a>
+            </li>
+          </ul>
+          <a class="header-button" href="#"> Хочу сюда!</a>
+        </nav>
+      </header>
 
-    <main class="main-index" data-test="main">
-      <section class="hero" data-test="hero">
-        <h1 class="visually-hidden"> Седона- маленький городок в Аризоне</h1>
-        <img src="images/welcome.svg" width="458" height="352"
-          alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
-      </section>
-
-      <section class="advantages" data-test="advantages">
-        <h2 class="visually-hidden"> Преимущества</h2>
-        <p class="lead">Седона- небольшой городок в Аризоне, заслуживающий большего!</p>
-        <p class="advantages-text">Рассмотрим причины по которым Седона круче, чем Гранд Каньон!</p>
-        <ul class="advantages-list">
-          <li class="advantages-item advantages-item-big">
-            <h3 class="advantages-title">Настоящий городок</h3>
-            <p class="advantages-description">Седона- не аттракцион для туристов, там течет своя жизнь
-            </p>
-            <img src="images/photo/building-city.jpg" width="800" height="385" alt="Здание в городе">
-          </li>
-          <li class="advantages-item advantages-item-medium">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="advantages-item advantages-item-medium">
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages-item advantages-item-medium">
-            <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-          <li class="advantages-item advantages-item-big">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <p class="advantages-description">Да, по нему можно пройти!Если вы осмелитесь, разумеется
-            </p>
-            <img src="images/photo/diablo-bridge.jpg" width="800" height="385" alt="Мост дьявола">
-          </li>
-        </ul>
-      </section>
-      <section class="infrastructure" data-test="search">
-        <h2 class="visually-hidden">Инфраструктура</h2>
-        <p class="lead">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
-        <p class="infrastructure-text">Опытный персонал и качественное обслуживание!</p>
-        <ul class="infrastructure-list">
-          <li class="infrastructure-item house">
-            <h3 class="infrastructure-title">Жилье</h3>
-            <p class="infrastructure-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-          </li>
-          <li class="infrastructure-item food">
-            <h3 class="infrastructure-title">Еда</h3>
-            <p class="infrastructure-description">Всегда заказывайте топовый фирменный бургер, вы не
-              разочаруетесь!</p>
-          </li>
-          <li class="infrastructure-item gifts">
-            <h3 class="infrastructure-title">Сувениры</h3>
-            <p class="infrastructure-description">Не только китайского, но и настоящего местного
-              производства!</p>
-          </li>
-        </ul>
-      </section>
-      <section class="search">
-        <h2 class="search-title">Заинтересовались?</h2>
-        <p class="search-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц
-          в Седоне</p>
-
-        <a class="search-button" href="catalog.html">Поиск гостиницы в Седоне</a>
-      </section>
-      <div class="block-subscribe">
-        <section class="newsletter" data-test="subscribe">
-          <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
-          <p class="newsletter-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
-          <form action="https://echo.htmlacademy.ru/" class="newsletter-form">
-            <p class="subscribe-form-name">
-              <label for="user-email" class="visually-hidden">Ваш e-mail</label>
-              <input type="email" placeholder="ваш e-mail" class="email-input" id="user-email" required>
-
-              <button type="submit" class="newsletter-button">Подписаться</button>
-            </p>
-          </form>
+      <main class="main-index main-container" data-test="main">
+        <section class="hero" data-test="hero">
+          <h1 class="visually-hidden"> Седона- маленький городок в Аризоне</h1>
+          <img class="welcome-images" src="images/welcome.svg" width="458" height="352"
+            alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
         </section>
-      </div>
-    </main>
 
-    <footer class="page footer" data-test="footer">
-      <ul class="footer-social-list">
-        <li class="footer-social-item">
-          <a class="button" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">ВКонтакте</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
-          <a class="button" href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Телеграм</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
-          <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">Youtube</span>
-          </a>
-        </li>
-      </ul>
-      <a class="footer-phone" href="tel:+78128121212">+7(812) 812-12-12</a>
-      <a class="copyright" href="https://htmlacademy.ru/">
-        <img src="images/logo-html-academy.svg" width="115" height="33" alt="Логотип Html-academy">
-      </a>
-    </footer>
+        <section class="advantages" data-test="advantages">
+          <h2 class="visually-hidden"> Преимущества</h2>
+          <p class="lead">Седона- небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="advantages-text">Рассмотрим причины по которым Седона круче, чем Гранд Каньон!</p>
+          <ul class="advantages-list">
+            <li class="advantages-item advantages-item-big">
+              <div class="advantages-item-big-container">
+                <h3 class="advantages-title">Настоящий городок</h3>
+                <p class="advantages-description">Седона- не аттракцион для туристов, там течет своя жизнь
+                </p>
+              </div>
+              <img src="images/photo/building-city.jpg" width="800" height="385" alt="Здание в городе">
+            </li>
+            <li class="advantages-item advantages-item-medium">
+              <h3 class="advantages-title">Небольшая площадь</h3>
+              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="advantages-item advantages-item-medium">
+              <h3 class="advantages-title">Красивая дорога</h3>
+              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="advantages-item advantages-item-medium">
+              <h3 class="advantages-title">Мало туристов</h3>
+              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+            <li class="advantages-item advantages-item-big">
+              <div class="advantages-item-big-container">
+                <h3 class="advantages-title">Там есть мост дьявола</h3>
+                <p class="advantages-description">Да, по нему можно пройти!Если вы осмелитесь, разумеется
+                </p>
+              </div>
+              <img src="images/photo/diablo-bridge.jpg" width="800" height="385" alt="Мост дьявола">
+            </li>
+          </ul>
+        </section>
+        <section class="infrastructure" data-test="search">
+          <h2 class="visually-hidden">Инфраструктура</h2>
+          <p class="lead">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+          <p class="infrastructure-text">Опытный персонал и качественное обслуживание!</p>
+          <ul class="infrastructure-list">
+            <li class="infrastructure-item house">
+              <h3 class="infrastructure-title">Жилье</h3>
+              <p class="infrastructure-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </li>
+            <li class="infrastructure-item food">
+              <h3 class="infrastructure-title">Еда</h3>
+              <p class="infrastructure-description">Всегда заказывайте топовый фирменный бургер, вы не
+                разочаруетесь!</p>
+            </li>
+            <li class="infrastructure-item gifts">
+              <h3 class="infrastructure-title">Сувениры</h3>
+              <p class="infrastructure-description">Не только китайского, но и настоящего местного
+                производства!</p>
+            </li>
+          </ul>
+        </section>
+        <section class="search">
+          <h2 class="search-title">Заинтересовались?</h2>
+          <p class="search-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц
+            в Седоне</p>
+
+          <a class="search-button" href="catalog.html">Поиск гостиницы в Седоне</a>
+        </section>
+        <div class="block-subscribe">
+          <section class="newsletter" data-test="subscribe">
+            <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+            <p class="newsletter-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+            <form action="https://echo.htmlacademy.ru/" class="newsletter-form">
+              <p class="subscribe-form-name">
+                <label for="user-email" class="visually-hidden">Ваш e-mail</label>
+                <input type="email" placeholder="ваш e-mail" class="email-input" id="user-email" required>
+
+                <button type="submit" class="newsletter-button">Подписаться</button>
+              </p>
+            </form>
+          </section>
+        </div>
+      </main>
+
+      <footer class="page footer" data-test="footer">
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Youtube</span>
+            </a>
+          </li>
+        </ul>
+        <a class="footer-phone" href="tel:+78128121212">+7(812) 812-12-12</a>
+        <a class="copyright" href="https://htmlacademy.ru/">
+          <img src="images/logo-html-academy.svg" width="115" height="33" alt="Логотип Html-academy">
+        </a>
+      </footer>
+    </div>
   </body>
 
 
