Добавляет исправленные сетки страниц на флексах

--- a/catalog.html
+++ b/catalog.html
@@ -237,7 +237,7 @@
           </form>
         </section>
       </main>
-      <footer class="page footer" data-test="footer">
+      <footer class="page-footer" data-test="footer">
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <a class="button" href="https://vk.com/htmlacademy">
@@ -256,8 +256,8 @@
           </li>
         </ul>
         <a class="footer-phone" href="tel:+78128121212">+7(812) 812-12-12</a>
-        <a href="https://htmlacademy.ru/" class="copyright">
-          <img src="images/logo-HTML-Academy.svg" width="115" height="33" alt="Логотип Html-academy">
+        <a class="copyright" href="https://htmlacademy.ru/">
+          <img src="images/logo-html-academy.svg" width="115" height="33" alt="Логотип Html-academy">
         </a>
       </footer>
     </div>
