--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
       </main>
 
-      <footer class="page footer" data-test="footer">
+      <footer class="page-footer" data-test="footer">
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <a class="button" href="https://vk.com/htmlacademy">
